v25.04/de/_sources/configuration_modules.rst.txt
Konfigurationsmodule

Der

rc_cube

 bietet mehrere verschiedene Konfigurationsmodule, welche es dem
Nutzer ermöglichen, den

rc_cube

 für spezielle Anwendungen zu konfigurieren.

Die Konfigurationsmodule sind:

Hand-Auge-Kalibrierung (rc_hand_eye_calibration, Abschnitt
\ref{handeye_calibration:sect-handeye-calibration})  ermöglicht dem
Benutzer, die Kamera entweder über die Web GUI oder die REST-API zu
einem Roboter zu kalibrieren.

CollisionCheck (rc_collision_check, Abschnitt \ref{collisioncheck
:sect-collision})  bietet eine einfache Möglichkeit zu prüfen, ob ein
Greifer in Kollision ist.

Kamerakalibrierung (rc_stereocalib, Abschnitt \ref{camera_calibration
:sect-camera-calibration})  ermöglicht die Überprüfung und
Durchführung der Kamerakalibrierung über die Web GUI\:(Abschnitt
\ref{webgui:sect-web-gui}).

IOControl und Projektor-Kontrolle (rc_iocontrol, Abschnitt
\ref{iocontrol:sect-iocontrol})  bietet die Kontrolle über die Ein-
und Ausgänge des Sensors mit speziellen Betriebsarten zur Kontrolle
eines externen Musterprojektors.

Diese Softwaremodule sind pipelinespezifisch, was heißt, dass sie
innerhalb jeder Kamerapipeline laufen. Änderungen ihrer Einstellungen
oder Parameter gelten nur für die zugehörige Pipeline und haben keinen
Einfluss auf andere Kamerapipelines auf dem

rc_cube

.

